--- a/src/app/components/Gene/IndirectGene.html
+++ b/src/app/components/Gene/IndirectGene.html
@@ -1,100 +1,79 @@
 <div class="home" layout="column" layout-align="center center">
-  <md-card layout-align="center center" class="card">
-    <md-card-content>
+  <md-card layout-align="center center" class="card indirect-card">
+    <md-card-content class="indirect-card">
       <div class="title">Indirect Gene Search</div>
-      <div layout="row" layout-align="space-around">
-        <div>
+      <div layout="row" layout-align="space-around" class="add-more">
+        <div layout-align="center center">
+          <div class="sub-title">Target</div>
           <md-input-container class="select">
-            <label>Gene Name</label>
-            <md-select ng-model="$ctrl.selectedGene">
+            <md-select ng-model="$ctrl.selectedTarget1">
               <md-option><em>None</em></md-option>
-              <md-option ng-repeat="gene in $ctrl.genes" ng-value="gene.name">
-                {{gene.name}}
+              <md-option ng-repeat="target in $ctrl.target1" ng-value="target.name">
+                {{target.name}}
+              </md-option>
+            </md-select>
+          </md-input-container>
+
+          <md-button class="md-raised" md-ink-ripple="{{$ctrl.buttonRipple}}">
+            Add more
+          </md-button>
+        </div>
+        <div layout-align="center center">
+          <div class="sub-title">Bridge</div>
+          <md-input-container class="select">
+            <md-select ng-model="$ctrl.selectedBridge1">
+              <md-option><em>None</em></md-option>
+              <md-option ng-repeat="bridge in $ctrl.bridge1" ng-value="bridge.name">
+                {{bridge.name}}
               </md-option>
             </md-select>
           </md-input-container>
 
           <md-input-container class="select">
-            <label>Mechanism of Action</label>
-            <md-select ng-model="$ctrl.selectedMechanism">
+            <md-select ng-model="$ctrl.selectedBridge2">
               <md-option><em>None</em></md-option>
-              <md-option ng-repeat="mechanism in $ctrl.mechanisms" ng-value="mechanism.name">
-                {{mechanism.name}}
+              <md-option ng-repeat="bridge in $ctrl.bridge2" ng-value="bridge.name">
+                {{bridge.name}}
               </md-option>
             </md-select>
           </md-input-container>
 
           <md-input-container class="select">
-            <label>Models</label>
-            <md-select ng-model="$ctrl.selectedModel">
+            <md-select ng-model="$ctrl.selectedBridge3">
               <md-option><em>None</em></md-option>
-              <md-option ng-repeat="model in $ctrl.models" ng-value="model.name">
-                {{model.name}}
+              <md-option ng-repeat="bridge in $ctrl.bridge3" ng-value="bridge.name">
+                {{bridge.name}}
               </md-option>
             </md-select>
           </md-input-container>
+
+          <md-button class="md-raised" md-ink-ripple="{{$ctrl.buttonRipple}}">
+            Add more
+          </md-button>
         </div>
         <div>
+          <div class="sub-title">Indication</div>
           <md-input-container class="select">
-            <label>Gene Name</label>
-            <md-select ng-model="$ctrl.selectedGene">
+            <md-select ng-model="$ctrl.selectedIndication1">
               <md-option><em>None</em></md-option>
-              <md-option ng-repeat="gene in $ctrl.genes" ng-value="gene.name">
-                {{gene.name}}
+              <md-option ng-repeat="indication in $ctrl.indication1" ng-value="indication.name">
+                {{indication.name}}
               </md-option>
             </md-select>
           </md-input-container>
 
           <md-input-container class="select">
-            <label>Mechanism of Action</label>
-            <md-select ng-model="$ctrl.selectedMechanism">
+            <md-select ng-model="$ctrl.selectedIndication2">
               <md-option><em>None</em></md-option>
-              <md-option ng-repeat="mechanism in $ctrl.mechanisms" ng-value="mechanism.name">
-                {{mechanism.name}}
+              <md-option ng-repeat="indication in $ctrl.indication2" ng-value="indication.name">
+                {{indication.name}}
               </md-option>
             </md-select>
           </md-input-container>
 
-          <md-input-container class="select">
-            <label>Models</label>
-            <md-select ng-model="$ctrl.selectedModel">
-              <md-option><em>None</em></md-option>
-              <md-option ng-repeat="model in $ctrl.models" ng-value="model.name">
-                {{model.name}}
-              </md-option>
-            </md-select>
-          </md-input-container>
-        </div>
-        <div>
-          <md-input-container class="select">
-            <label>Gene Name</label>
-            <md-select ng-model="$ctrl.selectedGene">
-              <md-option><em>None</em></md-option>
-              <md-option ng-repeat="gene in $ctrl.genes" ng-value="gene.name">
-                {{gene.name}}
-              </md-option>
-            </md-select>
-          </md-input-container>
-
-          <md-input-container class="select">
-            <label>Mechanism of Action</label>
-            <md-select ng-model="$ctrl.selectedMechanism">
-              <md-option><em>None</em></md-option>
-              <md-option ng-repeat="mechanism in $ctrl.mechanisms" ng-value="mechanism.name">
-                {{mechanism.name}}
-              </md-option>
-            </md-select>
-          </md-input-container>
-
-          <md-input-container class="select">
-            <label>Models</label>
-            <md-select ng-model="$ctrl.selectedModel">
-              <md-option><em>None</em></md-option>
-              <md-option ng-repeat="model in $ctrl.models" ng-value="model.name">
-                {{model.name}}
-              </md-option>
-            </md-select>
-          </md-input-container>
+          <md-button class="md-raised" md-ink-ripple="{{$ctrl.buttonRipple}}">
+            Add more
+          </md-button>
         </div>
       </div>
 
