--- a/src/app/components/Gene/DirectGene.html
+++ b/src/app/components/Gene/DirectGene.html
@@ -35,7 +35,7 @@
 
     </md-card-content>
     <md-card-footer layout="column" layout-align="center center">
-      <md-button class="md-raised" md-ink-ripple="{{$ctrl.buttonRipple}}">
+      <md-button class="md-raised" md-ink-ripple="{{$ctrl.buttonRipple}}" ng-click="$ctrl.submit()">
         Go
       </md-button>
     </md-card-footer>
